k8s-config/services/overlays/production/istio/recommendation-routing-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
    - recommendation
  http:
  - match:
    - headers:
        X-group:
          exact: test
    route:
    - destination:
        host: recommendation
        subset: new
  - route:
    - destination:
        host: recommendation
        subset: old
      weight: 100
    - destination:
        host: recommendation
        subset: new
      weight: 0
